# PyAndreas

./: .gitignore  CHANGELOG.md  LICENSE  PyAndreas.ini  README.md  RELEASE_CHECKLIST.md  pyproject.toml  pyrightconfig.json
.github/workflows/: python.yml
examples/: example_bodyguard.py  example_checkpoint_race.py  example_declarative_ui.py  example_dev_console.py  example_godmode.py  example_hook_damage.py  example_hud_panel.py  example_navigation_and_camera.py  example_quickstart.py  vehicle_tools.pui
plugin/: PyAndreas.sln  PyAndreas.vcxproj
plugin/src/: Main.cpp  PySaEvents.cpp  PySaEvents.h  PySaFont.cpp  PySaFont.h  PySaHooks.cpp  PySaHost.cpp  PySaHost.h  PySaMenu.cpp  PySaMenu.h  PySaModule.cpp  PySaModule.h  PySaRender.cpp
scripts/: README.txt  example_bodyguard.py  example_carnage.py  example_effects.py  example_gamepad.py  example_godmode.py  example_hook_damage.py  example_infinite_ammo.py  example_spawner.py  example_speedometer.py  example_teleport.py  example_textures.py  example_threads.py  example_toolkit.py  mspark.py
tests/: test_devtools.py  test_event_types.py  test_friendly_api.py  test_game_event_payloads.py  test_mspark_support.py  test_native.py  test_packaging.py  test_runtime.py  test_scripting_ergonomics.py  test_signature_types.py  test_storage.py  test_typing_surface.py  test_ui_document.py
tools/: build_release.ps1  gen_functions.py  gen_native_stub.py  gen_offsets.py  gen_opcodes.py  gen_ped_models.py  gen_signatures.py  gen_vehicle_models.py  install_pysa_module.bat  install_pysa_module.ps1  package_pysa.py  package_release.py
(+52 files in other folders)
