[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "PyAndreas"
dynamic = ["version"]
description = "Python scripting layer for GTA San Andreas through the PyAndreas ASI plugin"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "PyAndreas contributors" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

[tool.setuptools.dynamic]
version = { attr = "pysa.__version__" }

[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
pysa = ["py.typed", "*.pyi"]
